--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,18 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="color_primary">#6200EA</color>
+    <color name="color_primary_dark">#5502C8</color>
+    <color name="color_accent">#9D46FF</color>
+    <!--  new colors  -->
+    <color name="light_gray">#F9F9F9</color>
+    <color name="medium_gray">#D1D1D1</color>
+    <color name="light_medium_gray">#80D1D1D1</color>
+    <color name="dark_gray">#4B4B4B</color>
+    <color name="dark">#313C44</color>
+    <color name="darker">#151B20</color>
+    <color name="red">#FF4646</color>
+    <color name="yellow">#FFC114</color>
+    <color name="green">#00C980</color>
+    <color name="blue">#0000CC</color>
 </resources>
