--- a/app/src/main/res/layout/fragment_favorite_recipes.xml
+++ b/app/src/main/res/layout/fragment_favorite_recipes.xml
@@ -6,10 +6,11 @@
     android:background="@color/light_gray"
     tools:context=".FavoriteRecipesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:gravity="center"
+        android:text="Favorite Recipes Fragment"
+        android:textSize="24sp" />
 
 </FrameLayout>
