--- a/app/src/main/res/layout/recipes_row_layout.xml
+++ b/app/src/main/res/layout/recipes_row_layout.xml
@@ -68,7 +68,7 @@
                     android:layout_marginTop="12dp"
                     android:ellipsize="end"
                     android:maxLines="3"
-                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+                    android:text="@string/lorem_ipsum"
                     android:textColor="@color/dark_gray"
                     app:layout_constraintEnd_toEndOf="@+id/title_textView"
                     app:layout_constraintStart_toStartOf="@+id/title_textView"
