--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -15,9 +15,7 @@
         android:layout_marginEnd="8dp"
         android:orientation="vertical"
         tools:itemCount="3"
-        android:layout="@layout/activity_main"
-        app:shimmer_recycler_item_count="3"
-        app:shimmer_recycler_layout="@layout/placeholder_row_layout"
+        android:layout="@layout/placeholder_row_layout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -56,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:alpha="0.5"
-        android:text="No Internet Connection."
+        android:text="@string/no_internet_connection"
         android:textSize="18sp"
         android:textStyle="bold"
         android:visibility="invisible"
