--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -9,10 +9,14 @@
         android:id="@+id/recipesFragment"
         android:name="com.example.foodapp.ui.recipes.RecipesFragment"
         android:label="Recipes"
-        tools:layout="@layout/fragment_recipes" >
+        tools:layout="@layout/fragment_recipes">
         <action
             android:id="@+id/action_recipesFragment_to_recipesBottomSheet"
             app:destination="@id/recipesBottomSheet" />
+        <argument
+            android:name="backFromBottomSheet"
+            android:defaultValue="false"
+            app:argType="boolean" />
     </fragment>
     <fragment
         android:id="@+id/favoriteRecipesFragment"
@@ -28,7 +32,7 @@
         android:id="@+id/recipesBottomSheet"
         android:name="com.example.foodapp.ui.recipes.RecipesBottomSheet"
         android:label="RecipesBottomSheet"
-        tools:layout="@layout/recipes_bottom_sheet" >
+        tools:layout="@layout/recipes_bottom_sheet">
         <action
             android:id="@+id/action_recipesBottomSheet_to_recipesFragment"
             app:destination="@id/recipesFragment" />
