Design Activity Details Layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,5 +22,7 @@
     <color name="chipBackgroundColor">@color/light_gray</color>
     <color name="checkedChipTextColor">@color/color_primary</color>
     <color name="chipTextColor">@color/dark_gray</color>
+    <!--  ActionBarBackgroundColor  -->
+    <color name="actionBarBackgroundColor">@color/color_primary</color>
 
 </resources>
