--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="color_primary">#6200EA</color>
     <color name="color_primary_dark">#5502C8</color>
     <color name="color_accent">#9D46FF</color>
-    <!--  new colors  -->
+    <!--  New Colors  -->
     <color name="light_gray">#F9F9F9</color>
     <color name="medium_gray">#D1D1D1</color>
     <color name="light_medium_gray">#80D1D1D1</color>
