--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <!--    <style name="Base.Theme.FoodApp" parent="Theme.Material3.DayNight.NoActionBar">-->
-    <!--        &lt;!&ndash; Customize your light theme here. &ndash;&gt;-->
-    <!--        &lt;!&ndash; <item name="colorPrimary">@color/my_light_primary</item> &ndash;&gt;-->
-    <!--    </style>-->
+    <!--    <style name="Base.Theme.FoodApp" parent="Theme.Material3.DayNight.NoActionBar">
+            &lt;!&ndash; Customize your light theme here. &ndash;&gt;
+            &lt;!&ndash; <item name="colorPrimary">@color/my_light_primary</item> &ndash;&gt;
+        </style>-->
 
     <!--  NEW THEME :)  -->
     <style name="Base.Theme.FoodApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
@@ -15,9 +15,9 @@
 
     <!-- Bottom Sheet (Chip Style) -->
     <style name="CustomChipStyle" parent="Widget.MaterialComponents.Chip.Filter">
-        <item name="chipBackgroundColor">@color/chipBackgroundColor</item>
-        <item name="android:textColor">@color/chipTextColor</item>
-        <item name="checkedIconTint">@color/chipTextColor</item>
+        <item name="chipBackgroundColor">@color/chip_background_color</item>
+        <item name="android:textColor">@color/chip_text_color</item>
+        <item name="checkedIconTint">@color/chip_text_color</item>
     </style>
 
     <!--Details Activity-->
