--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -30,7 +30,7 @@
                 style="@style/CustomTabLayoutStyle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_scrollFlags="scroll||enterAlways"
+                app:layout_scrollFlags="scroll|enterAlways"
                 app:tabTextAppearance="@style/CustomTabTextStyle" />
 
         </com.google.android.material.appbar.AppBarLayout>
