--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,13 +21,12 @@
     </style>
 
     <!--Details Activity-->
-    <style name="DetailsActivityStyle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="DetailsActivityStyle" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryDark">@color/color_primary_dark</item>
         <item name="colorAccent">@color/color_accent</item>
         <item name="colorControlNormal">@color/white</item>
         <item name="android:statusBarColor">@color/color_primary_dark</item>
-
     </style>
 
     <style name="CustomTabLayoutStyle" parent="Widget.Design.TabLayout">
