--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,5 +24,8 @@
     <color name="chipTextColor">@color/dark_gray</color>
     <!--  ActionBarBackgroundColor  -->
     <color name="actionBarBackgroundColor">@color/color_primary</color>
+    <color name="strokeColor">@color/light_medium_gray</color>
+    <color name="cardBackgroundColor">@color/white</color>
+    <color name="titleColor">@color/darker</color>
 
 </resources>
