--- a/app/src/main/res/layout/recipes_row_layout.xml
+++ b/app/src/main/res/layout/recipes_row_layout.xml
@@ -138,7 +138,7 @@
                 <TextView
                     android:id="@+id/leaf_textView"
                     applyVeganColor="@{result.vegan}"
-                    android:layout_width="40dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/vegan"
                     android:textAlignment="center"
