--- a/app/src/main/res/layout/fragment_favorite_recipes.xml
+++ b/app/src/main/res/layout/fragment_favorite_recipes.xml
@@ -1,23 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
+        <variable
+            name="viewModelMain"
+            type="com.example.foodapp.ui.MainViewModel" />
+
+        <variable
+            name="mAdapter"
+            type="com.example.foodapp.ui.adapter.FavoriteRecipesAdapter" />
     </data>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/light_gray"
-        tools:context=".ui.favorite.FavoriteRecipesFragment">
+        tools:context=".ui.fragments.favorites.FavoriteRecipesFragment">
 
-        <TextView
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/favorite_recipes_recyclerview"
+            setData="@{mAdapter}"
+            viewVisibility="@{viewModelMain.readFavoriteRecipes}"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="Favorite Recipes Fragment"
-            android:textSize="24sp" />
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </FrameLayout>
+        <ImageView
+            android:id="@+id/no_data_imageView"
+            viewVisibility="@{viewModelMain.readFavoriteRecipes}"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:alpha="0.5"
+            android:src="@drawable/ic_menu_book"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.37" />
+
+        <TextView
+            android:id="@+id/no_data_textView"
+            viewVisibility="@{viewModelMain.readFavoriteRecipes}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:alpha="0.5"
+            android:text="@string/no_favorite_recipes"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="@+id/no_data_imageView"
+            app:layout_constraintStart_toStartOf="@+id/no_data_imageView"
+            app:layout_constraintTop_toBottomOf="@+id/no_data_imageView" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
