--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="actionBarBackgroundColor">@color/color_primary</color>
     <color name="strokeColor">@color/light_medium_gray</color>
     <color name="cardBackgroundColor">@color/white</color>
+    <color name="card_background_light_color">#106200EA</color>
     <color name="titleColor">@color/darker</color>
 
     <color name="status_bar_color">@color/colorPrimaryDark</color>
