Use BindingAdapter = readApiResponse & readDatabase

--- a/app/src/main/res/layout/fragment_food_joke.xml
+++ b/app/src/main/res/layout/fragment_food_joke.xml
@@ -22,6 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
+            readApiResponse3="@{viewModelMain.foodJokeResponse}"
+            readDatabase3="@{viewModelMain.readFoodJoke}"
             android:visibility="invisible"
             app:cardCornerRadius="6dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -64,6 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
+            readApiResponse3="@{viewModelMain.foodJokeResponse}"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -74,6 +77,8 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:alpha="0.5"
+            readApiResponse4="@{viewModelMain.foodJokeResponse}"
+            readDatabase4="@{viewModelMain.readFoodJoke}"
             android:src="@drawable/ic_sad"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -89,6 +94,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:alpha="0.5"
+            readApiResponse4="@{viewModelMain.foodJokeResponse}"
+            readDatabase4="@{viewModelMain.readFoodJoke}"
             android:text="Error"
             android:textSize="18sp"
             android:textStyle="bold"
