Create Dark Theme.

--- a/app/src/main/res/layout-night/fragment_food_joke.xml
+++ b/app/src/main/res/layout-night/fragment_food_joke.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/ic_food_joke_background"
+        android:background="@drawable/ic_food_joke_background_dark"
         tools:context=".ui.fragments.foodjoke.FoodJokeFragment">
 
         <com.google.android.material.card.MaterialCardView
@@ -36,7 +36,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/card_background_color">
 
                 <TextView
                     android:id="@+id/food_joke_textView"
