--- a/app/src/main/res/layout/favorite_recipes_row_layout.xml
+++ b/app/src/main/res/layout/favorite_recipes_row_layout.xml
@@ -26,13 +26,13 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:strokeColor="@color/light_medium_gray"
+            app:strokeColor="@color/stroke_color"
             app:strokeWidth="1dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white">
+                android:background="@color/card_background_color">
 
                 <ImageView
                     android:id="@+id/favorite_recipe_imageView"
@@ -56,7 +56,7 @@
                     android:fontFamily="@font/courgette"
                     android:maxLines="2"
                     android:text="@{favoritesEntity.result.title}"
-                    android:textColor="@color/darker"
+                    android:textColor="@color/title_color"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +72,7 @@
                     android:ellipsize="end"
                     android:maxLines="3"
                     parseHtml="@{favoritesEntity.result.summary}"
-                    android:textColor="@color/dark_gray"
+                    android:textColor="@color/description_color"
                     app:layout_constraintEnd_toEndOf="@+id/favorite_title_textView"
                     app:layout_constraintStart_toStartOf="@+id/favorite_title_textView"
                     app:layout_constraintTop_toBottomOf="@+id/favorite_title_textView" />
