--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/light_gray"
+        android:background="@color/background_color"
         tools:context=".ui.recipes.RecipesFragment">
 
         <androidx.recyclerview.widget.RecyclerView
