--- a/app/src/main/res/layout/placeholder_row_layout.xml
+++ b/app/src/main/res/layout/placeholder_row_layout.xml
@@ -16,7 +16,7 @@
             android:id="@+id/view"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:background="@color/medium_gray"
+            android:background="@color/placeholder_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +28,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="12dp"
-            android:background="@color/medium_gray"
+            android:background="@color/placeholder_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view"
             app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +38,7 @@
             android:layout_width="0dp"
             android:layout_height="65dp"
             android:layout_marginTop="12dp"
-            android:background="@color/medium_gray"
+            android:background="@color/placeholder_color"
             app:layout_constraintEnd_toEndOf="@+id/view2"
             app:layout_constraintStart_toStartOf="@+id/view2"
             app:layout_constraintTop_toBottomOf="@+id/view2" />
@@ -49,7 +49,7 @@
             android:layout_height="36dp"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
-            android:background="@color/medium_gray"
+            android:background="@color/placeholder_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/view3"
             app:layout_constraintTop_toBottomOf="@+id/view3" />
@@ -59,7 +59,7 @@
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_marginStart="24dp"
-            android:background="@color/medium_gray"
+            android:background="@color/placeholder_color"
             app:layout_constraintStart_toEndOf="@+id/view4"
             app:layout_constraintTop_toTopOf="@+id/view4" />
 
@@ -68,7 +68,7 @@
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_marginStart="24dp"
-            android:background="@color/medium_gray"
+            android:background="@color/placeholder_color"
             app:layout_constraintStart_toEndOf="@+id/view5"
             app:layout_constraintTop_toTopOf="@+id/view5" />
 
