--- a/app/src/main/res/layout/recipes_bottom_sheet.xml
+++ b/app/src/main/res/layout/recipes_bottom_sheet.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/card_background_color"
         tools:context=".ui.recipes.RecipesBottomSheet">
 
         <TextView
@@ -20,7 +20,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:text="@string/meal_type"
-            android:textColor="@color/dark"
+            android:textColor="@color/title_color"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -160,7 +160,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="12dp"
             android:text="@string/diet_type"
-            android:textColor="@color/dark"
+            android:textColor="@color/title_color"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -261,6 +261,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
             android:text="@string/apply"
+            android:textColor="@color/white"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
