--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,19 +17,31 @@
     <color name="green">#00C980</color>
     <color name="blue">#0000CC</color>
 
+    <!--LIGHT THEME-->
+    <color name="background_color">@color/light_gray</color>
+    <color name="placeholder_color">@color/medium_gray</color>
+    <color name="item_color">@color/darker</color>
+
     <!--  Bottom Sheet (Chip Style)  -->
     <color name="checkedChipBackgroundColor">#206200EA</color>
     <color name="chipBackgroundColor">@color/light_gray</color>
     <color name="checkedChipTextColor">@color/color_primary</color>
     <color name="chipTextColor">@color/dark_gray</color>
-    <!--  ActionBarBackgroundColor  -->
-    <color name="actionBarBackgroundColor">@color/color_primary</color>
-    <color name="strokeColor">@color/light_medium_gray</color>
-    <color name="cardBackgroundColor">@color/white</color>
+    <!--  Custom CardView Style  -->
+    <color name="stroke_color">@color/light_medium_gray</color>
+    <color name="card_background_color">@color/white</color>
     <color name="card_background_light_color">#106200EA</color>
-    <color name="titleColor">@color/darker</color>
+    <color name="title_color">@color/darker</color>
+    <color name="description_color">@color/dark_gray</color>
 
-    <color name="status_bar_color">@color/colorPrimaryDark</color>
+    <color name="status_bar_color">@color/status_bar_color</color>
     <color name="contextual_status_bar_color">@color/darker</color>
+    <color name="actionBarBackgroundColor">@color/color_primary</color>
+    <color name="contextual_action_bar_color">@color/dark</color>
+    <!--  Bottom Navigation  -->
+    <color name="bottomNavBackground">@color/white</color>
+    <color name="bottomNavItemColor">@color/dark_gray</color>
+    <color name="bottomNavCheckedItemColor">@color/colorPrimary</color>
+
 
 </resources>
