--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,8 @@
         <item name="colorPrimaryDark">@color/color_primary_dark</item>
         <item name="colorAccent">@color/color_accent</item>
         <item name="actionModeBackground">@color/contextual_status_bar_color</item>
+        <item name="android:statusBarColor">@color/status_bar_color</item>
+        <item name="actionBarStyle">@style/CustomActionBarStyle</item>
     </style>
 
     <!-- Bottom Sheet (Chip Style) -->
@@ -27,7 +29,7 @@
         <item name="colorPrimaryDark">@color/color_primary_dark</item>
         <item name="colorAccent">@color/color_accent</item>
         <item name="colorControlNormal">@color/white</item>
-        <item name="android:statusBarColor">@color/color_primary_dark</item>
+        <item name="android:statusBarColor">@color/status_bar_color</item>
     </style>
 
     <style name="CustomTabLayoutStyle" parent="Widget.Design.TabLayout">
@@ -42,4 +44,18 @@
     </style>
 
     <style name="Theme.FoodApp" parent="Base.Theme.FoodApp" />
+
+    <!--  Custom Bottom Navigation Style  -->
+    <style name="CustomBottomNavigationView" parent="Widget.MaterialComponents.BottomNavigationView">
+        <item name="backgroundTint">@color/bottomNavBackground</item>
+        <item name="itemIconTint">@color/bottom_nav_view_item_color</item>
+        <item name="itemTextColor">@color/bottom_nav_view_item_color</item>
+    </style>
+
+    <!--  Custom ActionBar Style  -->
+    <style name="CustomActionBarStyle" parent="Widget.MaterialComponents.ActionBar.Primary">
+        <item name="background">@color/actionBarBackgroundColor</item>
+    </style>
+
+
 </resources>
