--- a/app/src/main/res/layout/recipes_bottom_sheet.xml
+++ b/app/src/main/res/layout/recipes_bottom_sheet.xml
@@ -263,6 +263,7 @@
             android:text="@string/apply"
             android:textColor="@color/white"
             android:textAllCaps="false"
+            android:backgroundTint="@color/buttonBackgroundTintColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
